# irab_project

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: Dockerfile  README.md  Untitled  app.py  requirements.txt
configs/: model_large.yaml  model_medium.yaml  model_small.yaml
data/: irab_spm.model
data/tashkeela/Tashkeela-arabic-diacritized-text-utf8-0.3/doc/: AUTHORS  ChangeLog  INSTALL  TODO.txt  logs.txt  readme.txt  reference  stats-wordfrequency-2016-12-30-a.txt
docs/: ARCHITECTURE.md  DATA.md  DEPLOYMENT.md  DEVELOPMENT.md  EVALUATION.md  MATH.md  TRAINING.md
runs/model_medium/: config.yaml  metrics.json
runs/model_small/: config.yaml  metrics.json
scripts/: download_data.py  train.sh  upload_to_hub.py
src/irab_tashkeel/: __init__.py
src/irab_tashkeel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/irab_tashkeel/data/: __init__.py  build_dataset.py  i3rab.py  qac.py  schema.py  synthetic.py  tashkeela.py  yarob.py
src/irab_tashkeel/evaluation/: __init__.py  benchmark.py  eval_cli.py  metrics.py
src/irab_tashkeel/inference/: __init__.py  explanations.py  predictor.py
src/irab_tashkeel/models/: __init__.py  encoder.py  full_model.py  heads.py  irab_decoder.py  irab_tokenizer.py  labels.py  tokenizer.py
src/irab_tashkeel/rules/: __init__.py  case_mapping.py  orthographic.py  tiers.py
src/irab_tashkeel/training/: __init__.py  cli.py  dataset.py  lightning_module.py  losses.py  trainer.py
tests/: test_data.py  test_inference.py  test_metrics.py  test_models.py
(+2 files in other folders)
